test/negative/feature_multiarray.java

public class feature_multiarray {
  public feature_multiarray() {}
  protected int[][] x;
}

